--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,13 +21,16 @@ android {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:3.0.1'
     }
 }
-
+repositories {
+    maven { url "https://raw.githubusercontent.com/smilefam/SendBird-SDK-Android/master/" }
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.qiscus.sdk:chat:2.12.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.sendbird.sdk:sendbird-android-sdk:3.0.38'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
