--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".AlumnusListActivity"
+            android:name=".ConversationActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +30,7 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".OtherActivity" />
-        <activity android:name=".ConversationActivity"></activity>
+        <activity android:name=".AlumnusListActivity"></activity>
     </application>
 
 </manifest>
